# haskell-curio

./: README.md  haskell-curio.cabal
src/CT/Monad/: State.hs
src/Control/Monad/: List.hs  Maybe.hs  State.hs
src/Data/: Aggregator.hs  Pointed.hs
src/Data/Functor/: Forgetful.hs  FreeMonoid.hs  FreePointed.hs
