name:               haskell-curio
version:            0.0.1
license:            BSD3
license-file:       etc/LICENCE.md
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2014
synopsis:           Random Haskell experiments that have no practical value but maybe educational or entertainment value
category:           Control
description:        Random Haskell experiments and fun things
homepage:           https://github.com/domdere/haskell-curio/issues
bug-reports:        https://github.com/domdere/haskell-curio/issues
cabal-version:      >= 1.10
build-type:         Custom
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           https://github.com/domdere/haskell-curio

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                        , HUnit
                        , containers
                        , array

    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults

    hs-source-dirs:     src

    exposed-modules:

executable              app
    default-language:   Haskell2010
    -- .hs or .lhs file containing the Main module.
    hs-source-dirs:     main

    main-is:            Main.hs

    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults
                        -- -i.:..
                        -optl-Wl,-rpath,$ORIGIN 
    --extra-libraries:
    --extra-lib-dirs:
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- Other library packages from which modules are imported.
    build-depends:      base < 5 && >= 4,
                        haskell-curio

test-suite              doctests
    type:
                        exitcode-stdio-1.0

    main-is:
                        Main.hs

    default-language:
                        Haskell2010

    build-depends:
                        base < 5 && >= 3,
                        doctest >= 0.9.7,
                        filepath >= 1.3,
                        directory >= 1.1,
                        QuickCheck >= 2.0

    ghc-options:
                        -Wall
                        -threaded

    hs-source-dirs:
                        doctests

benchmark               benchmarks
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     benchmarks
    main-is:            Main.hs
    ghc-options:        -O2 -rtsopts

    build-depends:      base > 4 && <= 5
                    ,   haskell-curio
                    ,   criterion >= 0.8
